--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidad</title>
+    <title>Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,56 +23,56 @@
     </style>
 </head>
 <body>
-    <h1>Política de Privacidad</h1>
-    <p>Esta es la política de privacidad de nuestro servicio...</p>
+    <h1>Privacy Policy</h1>
+    <p>This is the privacy policy of our service...</p>
     
-    <h2>Introducción</h2>
-    <p>Esta política de privacidad explica cómo recopilamos, usamos y protegemos la información personal que nos proporcionan los usuarios de nuestro servicio de ChatGPT.</p>
+    <h2>Introduction</h2>
+    <p>This privacy policy explains how we collect, use, and protect the personal information that users provide to us when using our ChatGPT service.</p>
 
-    <h2>1. Información que Recopilamos</h2>
-    <p><strong>Datos Personales:</strong> Podemos recopilar información personal identificable como nombres, direcciones de correo electrónico y otra información similar que los usuarios nos proporcionen voluntariamente.</p>
-    <p><strong>Datos de Uso:</strong> Recopilamos información sobre cómo se accede y utiliza nuestro servicio, incluyendo direcciones IP, tipo de navegador, páginas visitadas, y la fecha y hora de las visitas.</p>
+    <h2>1. Information We Collect</h2>
+    <p><strong>Personal Data:</strong> We may collect personally identifiable information such as names, email addresses, and other similar information that users voluntarily provide to us.</p>
+    <p><strong>Usage Data:</strong> We collect information about how our service is accessed and used, including IP addresses, browser type, pages visited, and the date and time of visits.</p>
 
-    <h2>2. Uso de la Información</h2>
-    <p>Utilizamos la información recopilada para:</p>
+    <h2>2. Use of Information</h2>
+    <p>We use the collected information to:</p>
     <ul>
-        <li>Proveer y mantener nuestros servicios.</li>
-        <li>Notificar a los usuarios sobre cambios en nuestros servicios.</li>
-        <li>Permitir la participación en funciones interactivas de nuestro servicio cuando el usuario elija hacerlo.</li>
-        <li>Proveer servicio y soporte al cliente.</li>
-        <li>Monitorear el uso de nuestros servicios.</li>
-        <li>Detectar, prevenir y resolver problemas técnicos.</li>
+        <li>Provide and maintain our services.</li>
+        <li>Notify users about changes to our services.</li>
+        <li>Allow participation in interactive features of our service when users choose to do so.</li>
+        <li>Provide customer support and service.</li>
+        <li>Monitor the usage of our services.</li>
+        <li>Detect, prevent, and resolve technical issues.</li>
     </ul>
 
-    <h2>3. Retención de Datos</h2>
-    <p>Retendremos su información personal solo durante el tiempo que sea necesario para los propósitos establecidos en esta política de privacidad, incluyendo el cumplimiento de nuestras obligaciones legales, resolver disputas y hacer cumplir nuestros acuerdos y políticas legales.</p>
+    <h2>3. Data Retention</h2>
+    <p>We will retain your personal information only for as long as is necessary for the purposes set out in this privacy policy, including for the purposes of complying with our legal obligations, resolving disputes, and enforcing our legal agreements and policies.</p>
 
-    <h2>4. Transferencia de Datos</h2>
-    <p>Su información, incluyendo datos personales, puede ser transferida y mantenida en computadoras ubicadas fuera de su estado, provincia, país u otra jurisdicción gubernamental donde las leyes de protección de datos pueden diferir de las de su jurisdicción.</p>
+    <h2>4. Data Transfer</h2>
+    <p>Your information, including personal data, may be transferred to and maintained on computers located outside of your state, province, country, or other governmental jurisdiction where the data protection laws may differ from those of your jurisdiction.</p>
 
-    <h2>5. Divulgación de Datos</h2>
-    <p>Podemos divulgar información personal que recopilamos o usted proporciona:</p>
+    <h2>5. Disclosure of Data</h2>
+    <p>We may disclose personal information that we collect, or you provide:</p>
     <ul>
-        <li>Para cumplir con una obligación legal.</li>
-        <li>Para proteger y defender nuestros derechos o propiedades.</li>
-        <li>Para prevenir o investigar posibles irregularidades en conexión con el servicio.</li>
-        <li>Para proteger la seguridad personal de los usuarios del servicio o del público.</li>
+        <li>To comply with a legal obligation.</li>
+        <li>To protect and defend our rights or property.</li>
+        <li>To prevent or investigate possible wrongdoing in connection with the service.</li>
+        <li>To protect the personal safety of users of the service or the public.</li>
     </ul>
 
-    <h2>6. Seguridad de los Datos</h2>
-    <p>La seguridad de su información es importante para nosotros, pero recuerde que ningún método de transmisión por Internet o método de almacenamiento electrónico es 100% seguro. Si bien nos esforzamos por usar medios comercialmente aceptables para proteger su información personal, no podemos garantizar su seguridad absoluta.</p>
+    <h2>6. Data Security</h2>
+    <p>The security of your information is important to us, but remember that no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security.</p>
 
-    <h2>7. Enlaces a Otros Sitios</h2>
-    <p>Nuestro servicio puede contener enlaces a otros sitios que no son operados por nosotros. Si hace clic en un enlace de un tercero, será dirigido al sitio de ese tercero. Le recomendamos encarecidamente que revise la política de privacidad de cada sitio que visite.</p>
+    <h2>7. Links to Other Sites</h2>
+    <p>Our service may contain links to other sites that are not operated by us. If you click on a third-party link, you will be directed to that third party's site. We strongly advise you to review the privacy policy of every site you visit.</p>
 
-    <h2>8. Cambios a esta Política de Privacidad</h2>
-    <p>Podemos actualizar nuestra política de privacidad de vez en cuando. Le notificaremos de cualquier cambio publicando la nueva política de privacidad en esta página. Se le aconseja revisar esta política de privacidad periódicamente para cualquier cambio.</p>
+    <h2>8. Changes to This Privacy Policy</h2>
+    <p>We may update our privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page. You are advised to review this privacy policy periodically for any changes.</p>
 
-    <h2>9. Contacto</h2>
-    <p>Si tiene alguna pregunta sobre esta política de privacidad, por favor contáctenos:</p>
+    <h2>9. Contact Us</h2>
+    <p>If you have any questions about this privacy policy, please contact us:</p>
     <ul>
-        <li><strong>Correo Electrónico:</strong> [fiestay@uc.cl]</li>
-        <li><strong>Dirección Física:</strong> Santiago, Chile</li>
+        <li><strong>Email:</strong> [fiestay@uc.cl]</li>
+        <li><strong>Physical Address:</strong> Santiago, Chile</li>
     </ul>
 </body>
 </html>
